# qemu-camp-2026-exper-ihanzh

./: .gitignore  README.md
.github/workflows/: classroom.yml
gpgpu_driver/: Makefile  build.sh  gpgpu-test-qemu.c  gpgpu_driver.c  gpgpu_driver.h  gpgpu_driver_test.c  note.md  run.sh
hw/gpgpu/: Kconfig  gpgpu.c  gpgpu_core.c  gpgpu_core.h  meson.build
hw/riscv/: Kconfig  g233.c
include/hw/i2c/: g233-i2c.h
include/hw/riscv/: g233.h
include/hw/spi/: g233-spi.h
linux/: iommufd.h
rust/: Cargo.toml
rust/bindings/system-sys/: wrapper.h
rust/hw/: Kconfig  meson.build
rust/hw/gpgpu/: Cargo.toml  Kconfig  meson.build
rust/hw/gpgpu/src/: device.rs  lib.rs
rust/hw/i2c/: meson.build
rust/hw/i2c/g233-i2c/: Cargo.toml  meson.build
rust/hw/i2c/g233-i2c/src/: at24c02.rs  device.rs  lib.rs
rust/hw/i2c/src/: bus.rs  lib.rs
rust/hw/spi/: meson.build
rust/hw/spi/g233-spi/: Cargo.toml  meson.build
rust/hw/spi/g233-spi/src/: at25flash.rs  device.rs  lib.rs
rust/hw/spi/src/: lib.rs
rust/qom/src/: qom.rs
rust/system/src/: lib.rs  pci.rs  prelude.rs
tests/gevico/qtest/: meson.build  test-gpio-int.c  test-i2c-eeprom-page.c  test-i2c-eeprom-rw.c  test-i2c-gpio-bitbang.c  test-i2c-gpio-init.c  test-spi-rust-flash.c  test-spi-rust-init.c  test-spi-rust-transfer.c
